<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/tr1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/que_es_el_junit" />
        </TableRow>

        <TableRow
            android:id="@+id/tr2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgFakeTimer"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/fake_timer"
                    app:srcCompat="@drawable/kahoot_tiempo" />

                <ImageView
                    android:id="@+id/imgTest"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="4"
                    android:contentDescription="@string/img_test_act2"
                    app:srcCompat="@drawable/kahoot_actividad2_central"
                    tools:ignore="ImageContrastCheck" />

                <Button
                    android:id="@+id/btnSkip"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:backgroundTint="#095CB6"
                    android:rotation="0"
                    android:rotationX="0"
                    android:rotationY="0"
                    android:text="@string/omitir"
                    android:textSize="8sp"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tr3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#CF1212"
                android:onClick="sendAnswer"
                android:text="@string/java_development_kit"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:id="@+id/tr4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EDC038"
                android:onClick="sendAnswer"
                android:text="@string/repuesta1"
                android:textAllCaps="false"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/tr5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:onClick="sendAnswer"
                android:text="@string/respuesta3"
                android:textAllCaps="false"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/tr6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#3491DC"
                android:onClick="sendAnswer"
                android:text="@string/respuesta4"
                android:textAllCaps="false"
                tools:ignore="TextContrastCheck" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>