<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgKahoot"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/kahoot_img_mact1"
            app:srcCompat="@drawable/kahoot_actividad1" />

        <EditText
            android:id="@+id/etNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="90dp"
            android:ems="10"
            android:hint="@string/nick_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#939393"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="110dp"
            android:layout_marginTop="30dp"
            android:text="@string/iniciar_juego" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>